# centralpay-bridge

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  ADMIN_BOT_FA.md  ADMIN_BOT_VALIDATION.md  ADVERSARIAL_REVIEW_0.6.0_RC1.md  AGENTS.md  BACKUP_RESTORE_FA.md  CENTRALPAY_CONTRACT_ASSUMPTIONS.md  CHANGELOG.md  CODEX_PHASE1_PROMPT.md  DEFERRED_REVIEW.md  Dockerfile  FINAL_FINANCIAL_AUDIT.md  FINANCIAL_CRASH_MATRIX.md  FINANCIAL_INVARIANTS.md  FINANCIAL_TEST_MATRIX.md  INSTALL_FA.md  MIGRATION_GUIDE.md  OPERATIONS_FA.md  PRODUCTION_CHECKLIST_FA.md  README.md  README_FA.md  REAL_HOST_VALIDATION.md  RELEASE_NOTES_0.5.0_RC1.md  RELEASE_NOTES_0.6.0_RC1.md  RELEASE_RISK_REGISTER.md  SECURITY.md  STAGING_VALIDATION.md  ZERO_BASE_AUDIT_0.6.0_RC1.md  alembic.ini  docker-compose.yml  install.sh  pyproject.toml
alembic/: env.py
app/: __init__.py  asgi.py  audit.py  bot.py  centralpay.py  cli.py  config.py  db.py  exceptions.py  logging_setup.py  main.py  middleware.py  models.py  ops.py  ratelimit.py  reasons.py  security.py  version.py  worker.py
deploy/: centralpay.env.template
docs/: راهنمای_جامع_کاربری_CentralPay_Bridge_FA.docx  راهنمای_جامع_کاربری_CentralPay_Bridge_FA.md
scripts/: backup.sh  centralpay
tests/: conftest.py  test_admin_alerts.py  test_admin_auth.py  test_admin_bulk_resend.py  test_admin_commands.py  test_admin_deployment.py  test_admin_reliability.py  test_admin_resolved_reviews.py  test_audit.py  test_bot_classification.py  test_callback.py  test_callback_hardening.py  test_canon2_safe_int_parsing.py  test_centralpay_client.py  test_config.py  test_create_payment.py  test_creation_hardening.py  test_custom_payment_legacy_body.py  test_custom_payment_urlencoded_extra_fields.py  test_custom_payment_urlencoded_json_fallback.py  test_deployment.py  (+20 more)
(+55 files in other folders)
