[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "centralpay-bridge"
version = "0.5.0rc1"
description = "Payment bridge between a Telegram bot custom gateway API and CentralPay"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0.30,<3",
    "alembic>=1.13,<2",
    "httpx>=0.27,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "psycopg[binary]>=3.1,<4",
    "python-telegram-bot>=21.6,<23",
    "jdatetime>=5,<7",
    "tzdata",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.6",
    "mypy>=1.10",
    "pyyaml>=6",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Persian user-facing text legitimately contains characters RUF001 flags as
# "confusable" with ASCII.
"app/adminbot/*" = ["RUF001"]
"app/api/pages.py" = ["RUF001"]
"app/ops.py" = ["RUF001"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "jdatetime.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "postgres: integration tests that require a real PostgreSQL database (TEST_DATABASE_URL)",
]
